--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@coreui/icons": "^3.0.1",
     "@coreui/icons-react": "^2.2.1",
     "@coreui/react": "^5.0.0-beta.1",
+    "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.14.20",
     "axios": "^1.4.0",
     "bootstrap": "^5.3.0",
